--- a/maps.html
+++ b/maps.html
@@ -170,6 +170,102 @@
 			</div>
 
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/nuts_internet.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/nuts_internet.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>European Households with Access to the Internet by NUTS Region</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/female_he_2018.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/female_he_2018.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Young Females with University Degree by NUTS Region</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/male_he_2018.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/male_he_2018.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Young Males with University Degree by NUTS Region</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/nuts_net2018.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/nuts_net2018.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Europeans who accessed the Internet at least once a week by NUTS Region</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/nuts_net2018.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/nuts_net2018.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Europeans who accessed the Internet at least once a week by NUTS Region</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/milk.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/milk.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Milk Production by NUTS Region</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/nuts_excl2.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/nuts_excl2.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Europeans at Risk of Poverty by NUTS Region</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/nuts_docs100k.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/nuts_docs100k.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Number of Medical Doctors per 100,000 Europeans (2017)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/nuts_inhdoctors.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
@@ -271,19 +367,19 @@
 						<i class='fa fa-image ikonica'></i>
 						<img src='maps/birth.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Mother's Average Age at Birth of First Child</div>
+							<div class='opis'>Mother's Average Age at Birth of First Child by NUTS Region</div>
 						</div>
 					</div>
 				</a>
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
-				<a target="_blank" href="maps/full/eu_employment2016b.png">
+				<a target="_blank" href="maps/full/eu_unemploy.gif">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
-						<img src='maps/eu_employment2016b.jpg'>
+						<img src='maps/eu_unemploy.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Employment in the EU by NUTS Regions</div>
+							<div class='opis'>Unemployment in the EU by NUTS Region</div>
 						</div>
 					</div>
 				</a>
@@ -500,18 +596,6 @@
 						<img src='maps/iat.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>Racism in Europe</div>
-						</div>
-					</div>
-				</a>
-			</div>
-			
-			<div class="col-xs-12 col-md-6">
-				<a target="_blank" href="maps/full/gdpgrowth.png">
-					<div class='kartica'>
-						<i class='fa fa-image ikonica'></i>
-						<img src='maps/gdpgrowth.jpg'>
-						<div class='tekstKartice'>
-							<div class='opis'>GDP Growth in Europe in 2018</div>
 						</div>
 					</div>
 				</a>
@@ -1016,18 +1100,6 @@
 						<img src='maps/lunatics.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>Lunatics in The Kingdom of Serbia (1895)</div>
-						</div>
-					</div>
-				</a>
-			</div>
-			
-			<div class="col-xs-12 col-md-6">
-				<a target="_blank" href="maps/full/nato99.png">
-					<div class='kartica'>
-						<i class='fa fa-image ikonica'></i>
-						<img src='maps/nato99.jpg'>
-						<div class='tekstKartice'>
-							<div class='opis'>NATO bombing of Yugoslavia (24 March - 10 June 1999)</div>
 						</div>
 					</div>
 				</a>
