--- a/maps.html
+++ b/maps.html
@@ -1104,7 +1104,67 @@
 					</div>
 				</a>
 			</div>
-			
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/srb_theater.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/srb_theater.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Distance to the nearest theater in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/srb_cinema.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/srb_cinema.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Distance to the nearest cinema in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/srb_library.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/srb_library.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Distance to the nearest library in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/srb_motorway.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/srb_motorway.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Distance to the nearest motorway in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/srb_road_density.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/srb_motorway.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Road Density in Serbia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/nato99victims.png">
 					<div class='kartica'>
