SHS 2nd attempt
Grrrr

--- a/maps.html
+++ b/maps.html
@@ -1157,7 +1157,7 @@
 				<a target="_blank" href="maps/full/srb_road_density.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
-						<img src='maps/srb_motorway.jpg'>
+						<img src='maps/srb_road_density.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>Road Density in Serbia</div>
 						</div>
@@ -1242,12 +1242,12 @@
 			</div>
 			
 			<div class="col-xs-12 col-md-6">
-				<a target="_blank" href="maps/full/shs_sex.png">
+				<a target="_blank" href="maps/full/shs_sex_balance.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
-						<img src='maps/shs_sex.jpg'>
+						<img src='maps/shs_sex_balance.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Gender Balance in The Kingdom of Yugoslavia</div>
+							<div class='opis'>Sex Balance in The Kingdom of Yugoslavia (counties and towns)</div>
 						</div>
 					</div>
 				</a>
@@ -1259,7 +1259,7 @@
 						<i class='fa fa-image ikonica'></i>
 						<img src='maps/shs_languages.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Language Structure of The Kingdom of Yugoslavia</div>
+							<div class='opis'>Language Structure of The Kingdom of Yugoslavia (counties and towns)</div>
 						</div>
 					</div>
 				</a>
@@ -1271,7 +1271,55 @@
 						<i class='fa fa-image ikonica'></i>
 						<img src='maps/shs_religion.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Religious Structure of The Kingdom of Yugoslavia</div>
+							<div class='opis'>Religious Structure of The Kingdom of Yugoslavia (counties and towns)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_orthodox.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_orthodox.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Orthodox Christians in The Kingdom of Yugoslavia (counties and towns)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_catholic.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_catholic.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Roman Catholic Christians in The Kingdom of Yugoslavia (counties and towns)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_protestant.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_protestant.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Evangelical Christians in The Kingdom of Yugoslavia (counties and towns)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_muslim.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_muslim.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Muslims in The Kingdom of Yugoslavia (counties and towns)</div>
 						</div>
 					</div>
 				</a>
@@ -1283,7 +1331,7 @@
 						<i class='fa fa-image ikonica'></i>
 						<img src='maps/shs_illiteracy.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Illiteracy Rate in The Kingdom of Yugoslavia</div>
+							<div class='opis'>Illiteracy Rate in The Kingdom of Yugoslavia (counties and towns)</div>
 						</div>
 					</div>
 				</a>
@@ -1296,6 +1344,90 @@
 						<img src='maps/shs_profession.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>Professions in The Kingdom of Yugoslavia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_density_opstina.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_density_opstina.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Population Density in The Kingdom of Yugoslavia (municipalities)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_sexratio_opstina.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_sexratio_opstina.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Sex Ratio in The Kingdom of Yugoslavia (municipalities)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_hh_size_opstina.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_hh_size_opstina.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Average Household Size in The Kingdom of Yugoslavia (municipalities)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_orthodox_opstina.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_orthodox.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Orthodox Christians in The Kingdom of Yugoslavia (municipalities)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_catholic_opstina.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_catholic.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Roman Catholic Christians in The Kingdom of Yugoslavia (municipalities)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_protestant_opstina.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_protestant.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Evangelical Christians in The Kingdom of Yugoslavia (municipalities)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_muslim_opstina.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_muslim.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Muslims in The Kingdom of Yugoslavia (municipalities)</div>
 						</div>
 					</div>
 				</a>
