--- a/maps.html
+++ b/maps.html
@@ -26,6 +26,18 @@
 			-->
 			
 		<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ci_rm.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ci_rm.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>China's Confucius Institutes and Russia's Russkiy Mir Institutes(2004-2015)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/ci2.gif">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
@@ -1772,6 +1784,30 @@
 					</div>
 				</a>
 			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/svn_motorway.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/svn_motorway.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Distance from the national motorway in Slovenia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/svn_road_density.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/svn_road_density.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Road Density in Slovenia</div>
+						</div>
+					</div>
+				</a>
+			</div>
 			
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/slovenia_graves.png">
@@ -1792,6 +1828,30 @@
 						<img src='maps/ubistva1990_2018b.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>Mafia Killings in Belgrade (1990-2018)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/mkd_motorway.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/mkd_motorway.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Distance from the national motorway in N. Macedonia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/mkd_road_density.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/mkd_road_density.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Road Density in N. Macedonia</div>
 						</div>
 					</div>
 				</a>
@@ -1832,6 +1892,30 @@
 					</div>
 				</a>
 			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/bih_motorway.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/bih_motorway.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Distance from the national motorway in Bosnia and Herzegovina</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/bih_road_density.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/bih_road_density.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Road Density in Bosnia and Herzegovina</div>
+						</div>
+					</div>
+				</a>
+			</div>
 			
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/rs_pop.png">
@@ -1840,6 +1924,30 @@
 						<img src='maps/rs_pop.jpg'>
 						<div class='tekstKartice'>
 							<div class='opis'>Population Density in The Serb Republic and Brcko District (2013)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/hrv_motorway.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/hrv_motorway.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Distance from the national motorway in Croatia</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/hrv_road_density.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/hrv_road_density.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Road Density in Croatia</div>
 						</div>
 					</div>
 				</a>
