Illiteracy in Serbia in 1991
Illiteracy in Serbia in 1991

--- a/maps.html
+++ b/maps.html
@@ -806,6 +806,30 @@
 			</div>
 
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/srb_illiterate_females_91.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/srb_illiterate_females_91.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Female Illiteracy in Serbia in 1991</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/srb_illiterate_males_91.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/srb_illiterate_males_91.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Male Illiteracy in Serbia in 1991</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/covid19naselja.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
