--- a/maps.html
+++ b/maps.html
@@ -182,6 +182,30 @@
 			</div>
 
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/age_dep_2019.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/age_dep_2019.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Age Dependency Ratio in Europe in 2019</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/eu_mortality.gif">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/eu_mortality.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Deaths in 2020 Compared to Average Deaths for 2016-2019</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/nuts_internet.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
