EU map of infant mortality
EU map of infant mortality

--- a/maps.html
+++ b/maps.html
@@ -182,6 +182,18 @@
 			</div>
 
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/infant_mortality_2018b.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/infant_mortality_2018b.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Infant Mortality in 2018</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/age_dep_2019.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
