--- a/research.html
+++ b/research.html
@@ -72,6 +72,25 @@
       </div>
     </div>
 
+    <div class="kartica">
+            <i class="fa fa-external-link ikonica"></i>
+            <img src="https://imgur.com/T54Ac1v.jpg" />
+            <div class="tekstKartice">
+              <div class="opis">Charm Offensive or Offensive Charm?</div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <a
+          target="_blank"
+          href="https://www.tandfonline.com/doi/full/10.1080/09668136.2020.1785397"
+        >
+
+
     <h2 style="margin-top:50px;">Other publications</h2>
 
     <div class="row">
