--- a/research.html
+++ b/research.html
@@ -76,7 +76,7 @@
           target="_blank"
           href="https://www.tandfonline.com/doi/full/10.1080/09668136.2020.1785397"
         >
-      <div class="col-xs-12 col-md-6">
+      <div class="kartica">
         <i class="fa fa-external-link ikonica"></i>
         <img src="https://imgur.com/T54Ac1v.jpg" />
         <div class="tekstKartice">
