--- a/maps.html
+++ b/maps.html
@@ -866,6 +866,30 @@
 			</div>
 
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/srb_he_females_91.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/srb_he_females_91.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Females with Tertiary Education in Serbia in 1991</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/srb_he_males_91.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/srb_he_males_91.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Males with Tertiary Education in Serbia in 1991</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/covid19naselja.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
