(Fe)male illiteracy in SHS
Illiteracy by gender in the Kingdom of Yugoslavia

--- a/maps.html
+++ b/maps.html
@@ -1427,7 +1427,31 @@
 						<i class='fa fa-image ikonica'></i>
 						<img src='maps/shs_illiteracy.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Illiteracy Rate in The Kingdom of Yugoslavia (counties and towns)</div>
+							<div class='opis'>Illiteracy in The Kingdom of Yugoslavia (counties and towns)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_illiteracy_males.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_illiteracy_males.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Male Illiteracy in The Kingdom of Yugoslavia (counties and towns)</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/shs_illiteracy_females.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/shs_illiteracy_females.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Female Illiteracy in The Kingdom of Yugoslavia (counties and towns)</div>
 						</div>
 					</div>
 				</a>
