Unemployment of (fe)males in Europe

--- a/maps.html
+++ b/maps.html
@@ -420,6 +420,30 @@
 					</div>
 				</a>
 			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/unemployment_females.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/unemployment_females.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Unemployment of Adult Females by NUTS Region</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/unemployment_males.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/unemployment_males.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Unemployment of Adult Males by NUTS Region</div>
+						</div>
+					</div>
+				</a>
+			</div>
 			
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/eu_unemploy.gif">
