--- a/maps.html
+++ b/maps.html
@@ -24,6 +24,18 @@
 			</div>
 			
 			-->
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/attacks_schools.gif">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/attacks_schools.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Armed Attacks vs. Schools, Students or Teachers (1998-2018)</div>
+						</div>
+					</div>
+				</a>
+			</div>
 			
 		<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/ci_rm.png">
