--- a/maps.html
+++ b/maps.html
@@ -26,12 +26,12 @@
 			-->
 
 			<div class="col-xs-12 col-md-6">
-				<a target="_blank" href="maps/full/attacks_school.gif">
+				<a target="_blank" href="maps/full/eur_rail.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
-						<img src='maps/attacks_school.jpg'>
+						<img src='maps/eur_rail.jpg'>
 						<div class='tekstKartice'>
-							<div class='opis'>Armed Attacks vs. Schools, Students or Teachers (1998-2018)</div>
+							<div class='opis'>Railways in Europe</div>
 						</div>
 					</div>
 				</a>
