--- a/maps.html
+++ b/maps.html
@@ -1720,6 +1720,18 @@
 					</div>
 				</a>
 			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/ib_ethnic_srb.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/ib_ethnic_srb.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Ethnic Origins of Inmates from the Yugoslav Communist Gulag at Goli Otok</div>
+						</div>
+					</div>
+				</a>
+			</div>
 			
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/sutjeska.png">
