--- a/maps.html
+++ b/maps.html
@@ -26,6 +26,18 @@
 			-->
 
 			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/motorways.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/motorways.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Motorways in Europe</div>
+						</div>
+					</div>
+				</a>
+			</div>
+
+			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/full/eur_rail.png">
 					<div class='kartica'>
 						<i class='fa fa-image ikonica'></i>
