New Europe and NDH maps

--- a/maps.html
+++ b/maps.html
@@ -24,13 +24,61 @@
 			
 			-->
 
+	<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/lau_dist_rail.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/lau_dist_rail.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Aerial Distance From Every Local Administrative Unit in Europe to The Nearest Railway</div>
+						</div>
+					</div>
+				</a>
+	</div>
+
+	<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/full/agri.png">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='maps/agri.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Employed in Agriculture and Fishery in Europe</div>
+						</div>
+					</div>
+				</a>
+	</div>
+
       <div class="col-xs-12 col-md-6">
-        <a target="_blank" href="maps/full/post.png">
+        <a target="_blank" href="maps/full/nuts2_poverty.png">
           <div class="kartica">
             <i class="fa fa-image ikonica"></i>
-            <img src="maps/post.jpg" />
+            <img src="maps/nuts2_poverty.jpg" />
             <div class="tekstKartice">
-              <div class="opis">Post Offices in Europe</div>
+              <div class="opis">People at Risk of Poverty or Social Exclusion in Europe</div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-xs-12 col-md-6">
+        <a target="_blank" href="maps/full/female_prim_edu.png">
+          <div class="kartica">
+            <i class="fa fa-image ikonica"></i>
+            <img src="maps/female_prim_edu.jpg" />
+            <div class="tekstKartice">
+              <div class="opis">Females With Less than Primary or Secondary Education in Europe</div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-xs-12 col-md-6">
+        <a target="_blank" href="maps/full/male_prim_edu.png">
+          <div class="kartica">
+            <i class="fa fa-image ikonica"></i>
+            <img src="maps/male_prim_edu.jpg" />
+            <div class="tekstKartice">
+              <div class="opis">Males With Less than Primary or Secondary Education in Europe</div>
             </div>
           </div>
         </a>
@@ -2606,6 +2654,36 @@
             <div class="tekstKartice">
               <div class="opis">
                 Estimated Human Losses for the Independent State of Croatia
+                (1941-1945)
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-xs-12 col-md-6">
+        <a target="_blank" href="maps/full/ndh_terror.png">
+          <div class="kartica">
+            <i class="fa fa-image ikonica"></i>
+            <img src="maps/ndh_terror.jpg" />
+            <div class="tekstKartice">
+              <div class="opis">
+                Identified Victims of Direct Terror in the Independent State of Croatia
+                (1941-1945)
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-xs-12 col-md-6">
+        <a target="_blank" href="maps/full/ndh_nob.png">
+          <div class="kartica">
+            <i class="fa fa-image ikonica"></i>
+            <img src="maps/ndh_nob.jpg" />
+            <div class="tekstKartice">
+              <div class="opis">
+                Identified Partisan Victims in the Independent State of Croatia
                 (1941-1945)
               </div>
             </div>
