--- a/interactiveMaps.html
+++ b/interactiveMaps.html
@@ -22,6 +22,18 @@
 			</div>
 			
 			-->
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/interactive/census1931/index.html">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='https://i.imgur.com/JiXhGUq.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>The 1931 Yugoslav Census Data</div>
+						</div>
+					</div>
+				</a>
+			</div>
 			
 			
 			<div class="col-xs-12 col-md-6">
