--- a/maps/interactive/census1931/index.html
+++ b/maps/interactive/census1931/index.html
@@ -21,10 +21,14 @@
       rel="stylesheet"
       href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css"
     />
-    <script
+    <!-- <script
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
       type="text/javascript"
-    ></script>
+    ></script> -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"></script>
     <link
       rel="stylesheet"
       href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css"
