--- a/maps/interactive/census1931/index.html
+++ b/maps/interactive/census1931/index.html
@@ -531,7 +531,7 @@
           latestyear: "1931",
           url: "https://milosp.info/documents/yug_census1931_v1-0-0.zip",
           source: "Download data",
-          description: "The proportion of working people employed as public servants or military personell.",
+          description: "The proportion of working people employed as public servants or military personnel.",
         },
 
         t_employed_public_service_men_perc: {
@@ -542,7 +542,7 @@
           latestyear: "1931",
           url: "https://milosp.info/documents/yug_census1931_v1-0-0.zip",
           source: "Download data",
-          description: "The proportion of working men employed as public servants or military personell.",
+          description: "The proportion of working men employed as public servants or military personnel.",
         },
 
         t_employed_public_service_women_perc: {
@@ -553,7 +553,7 @@
           latestyear: "1931",
           url: "https://milosp.info/documents/yug_census1931_v1-0-0.zip",
           source: "Download data",
-          description: "The proportion of working women employed as public servants or military personell.",
+          description: "The proportion of working women employed as public servants or military personnel.",
         },
 
          t_employed_other_perc: {
