--- a/interactiveMaps.html
+++ b/interactiveMaps.html
@@ -34,7 +34,18 @@
 					</div>
 				</a>
 			</div>
-			
+
+			<div class="col-xs-12 col-md-6">
+				<a target="_blank" href="maps/interactive/census1931srb/index.html">
+					<div class='kartica'>
+						<i class='fa fa-image ikonica'></i>
+						<img src='https://i.imgur.com/JiXhGUq.jpg'>
+						<div class='tekstKartice'>
+							<div class='opis'>Jugoslavija prema popisu iz 1931.</div>
+						</div>
+					</div>
+				</a>
+			</div>
 			
 			<div class="col-xs-12 col-md-6">
 				<a target="_blank" href="maps/interactive/covid19italy/covid19ita.html">
