New maps of Europe

--- a/maps.html
+++ b/maps.html
@@ -188,6 +188,150 @@
       </div>
 
       <div class="col-xs-12 col-md-6">
+        <a target="_blank" href="maps/full/population_change.png">
+          <div class='kartica'>
+            <i class='fa fa-image ikonica'></i>
+            <img src='maps/population_change.jpg'>
+            <div class='tekstKartice'>
+              <div class='opis'>Population Change in Europe between 2014 and 2019</div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-xs-12 col-md-6">
+        <a target="_blank" href="maps/full/violence_women.png">
+          <div class='kartica'>
+            <i class='fa fa-image ikonica'></i>
+            <img src='maps/violence_women.jpg'>
+            <div class='tekstKartice'>
+              <div class='opis'>Violence Against Women (2019)</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      
+          <div class="col-xs-12 col-md-6">
+            <a target="_blank" href="maps/full/mway_dist_eur.png">
+              <div class='kartica'>
+                <i class='fa fa-image ikonica'></i>
+                <img src='maps/mway_dist_eur.jpg'>
+                <div class='tekstKartice'>
+                  <div class='opis'>Motorway Distance in Europe</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-xs-12 col-md-6">
+            <a target="_blank" href="maps/full/fertility.png">
+              <div class='kartica'>
+                <i class='fa fa-image ikonica'></i>
+                <img src='maps/fertility.jpg'>
+                <div class='tekstKartice'>
+                  <div class='opis'>Fertility Rate in Europe</div>
+                </div>
+              </div>
+            </a>
+          </div>
+
+            <div class="col-xs-12 col-md-6">
+              <a target="_blank" href="maps/full/nuts2_low_work.png">
+                <div class='kartica'>
+                  <i class='fa fa-image ikonica'></i>
+                  <img src='maps/nuts2_low_work.jpg'>
+                  <div class='tekstKartice'>
+                    <div class='opis'>The Proportion of Low-Work Individuals</div>
+                  </div>
+                </div>
+              </a>
+            </div>
+
+                <div class="col-xs-12 col-md-6">
+                  <a target="_blank" href="maps/full/fires_100km2.png">
+                    <div class='kartica'>
+                      <i class='fa fa-image ikonica'></i>
+                      <img src='maps/fires_100km2.jpg'>
+                      <div class='tekstKartice'>
+                        <div class='opis'>Active Fires Per 100 Square Kilometers of Area</div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                  <div class="col-xs-12 col-md-6">
+                    <a target="_blank" href="maps/full/females_he.png">
+                      <div class='kartica'>
+                        <i class='fa fa-image ikonica'></i>
+                        <img src='maps/females_he.jpg'>
+                        <div class='tekstKartice'>
+                          <div class='opis'>Adult Females with Tertiary Edcuation</div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+
+                    <div class="col-xs-12 col-md-6">
+                      <a target="_blank" href="maps/full/males_he.png">
+                        <div class='kartica'>
+                          <i class='fa fa-image ikonica'></i>
+                          <img src='maps/males_he.jpg'>
+                          <div class='tekstKartice'>
+                            <div class='opis'>Adult Males with Tertiary Edcuation</div>
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+
+                      <div class="col-xs-12 col-md-6">
+                        <a target="_blank" href="maps/full/sex_ratio.png">
+                          <div class='kartica'>
+                            <i class='fa fa-image ikonica'></i>
+                            <img src='maps/sex_ratio.jpg'>
+                            <div class='tekstKartice'>
+                              <div class='opis'>Human Sex Ratio</div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+
+  <div class="col-xs-12 col-md-6">
+    <a target="_blank" href="maps/full/females_suicide.png">
+      <div class='kartica'>
+        <i class='fa fa-image ikonica'></i>
+        <img src='maps/females_suicide.jpg'>
+        <div class='tekstKartice'>
+          <div class='opis'>Suicide Rate Among Females (2016)</div>
+        </div>
+      </div>
+    </a>
+  </div>
+
+  <div class="col-xs-12 col-md-6">
+    <a target="_blank" href="maps/full/males_suicide.png">
+      <div class='kartica'>
+        <i class='fa fa-image ikonica'></i>
+        <img src='maps/males_suicide.jpg'>
+        <div class='tekstKartice'>
+          <div class='opis'>Suicide Rate Among Males (2016)</div>
+        </div>
+      </div>
+    </a>
+  </div>
+
+  <div class="col-xs-12 col-md-6">
+    <a target="_blank" href="maps/full/motorway_100km2.png">
+      <div class='kartica'>
+        <i class='fa fa-image ikonica'></i>
+        <img src='maps/motorway_100km2.jpg'>
+        <div class='tekstKartice'>
+          <div class='opis'>Motorway Length Adjusted by Area Size</div>
+        </div>
+      </div>
+    </a>
+  </div>
+
+      <div class="col-xs-12 col-md-6">
         <a target="_blank" href="maps/full/egov.png">
           <div class='kartica'>
             <i class='fa fa-image ikonica'></i>
