--- a/research.html
+++ b/research.html
@@ -87,6 +87,19 @@
           </a>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <a target="_blank" href="documents/kosovo.pdf">
+            <div class="kartica">
+              <i class="fa fa-file-pdf-o ikonica"></i>
+              <img src="https://imgur.com/1JARu0P.jpg" />
+              <div class="tekstKartice">
+                <div class="opis">Unilateral secession, international recognition, and great power contestation</div>
+              </div>
+            </div>
+          </a>
+        </div>
     
     <h2 style="margin-top:50px;">Other publications</h2>
 
