--- a/research.html
+++ b/research.html
@@ -88,8 +88,8 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-xs-12 col-md-6">
+        <div class="row">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
           <a target="_blank" href="documents/recognition.pdf">
             <div class="kartica">
               <i class="fa fa-file-pdf-o ikonica"></i>
@@ -100,6 +100,7 @@
             </div>
           </a>
         </div>
+      </div>
     
     <h2 style="margin-top:50px;">Other publications</h2>
 
