--- a/research.html
+++ b/research.html
@@ -93,7 +93,7 @@
           <a target="_blank" href="documents/recognition.pdf">
             <div class="kartica">
               <i class="fa fa-file-pdf-o ikonica"></i>
-              <img src="https://imgur.com/x55puNX.jpg" />
+              <img src="https://imgur.com/X5xG6U7.jpg" />
               <div class="tekstKartice">
                 <div class="opis">Unilateral secession, international recognition, and great power contestation</div>
               </div>
