Ethnic and religious density of Yugoslavia
1931-1991

--- a/maps.html
+++ b/maps.html
@@ -2173,6 +2173,18 @@
         </a>
       </div>
 
+        <div class="col-xs-12 col-md-6">
+          <a target="_blank" href="maps/full/dot_density_yug_relig_1931.png">
+            <div class='kartica'>
+              <i class='fa fa-image ikonica'></i>
+              <img src='maps/dot_density_yug_relig_1931.jpg'>
+              <div class='tekstKartice'>
+                <div class='opis'>Religious Density of Yugoslavia in 1931</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
       <div class="col-xs-12 col-md-6">
         <a target="_blank" href="maps/full/cinema.png">
           <div class="kartica">
@@ -2411,6 +2423,54 @@
           </div>
         </a>
       </div>
+    </div>
+
+      <div class="col-xs-12 col-md-6">
+        <a target="_blank" href="maps/full/dot_density_yug_ethno_1961.png">
+          <div class='kartica'>
+            <i class='fa fa-image ikonica'></i>
+            <img src='maps/dot_density_yug_ethno_1961.jpg'>
+            <div class='tekstKartice'>
+              <div class='opis'>Ethnic Density of Yugoslavia in 1961</div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+    <div class="col-xs-12 col-md-6">
+      <a target="_blank" href="maps/full/dot_density_yug_ethno_1971.png">
+        <div class='kartica'>
+          <i class='fa fa-image ikonica'></i>
+          <img src='maps/dot_density_yug_ethno_1971.jpg'>
+          <div class='tekstKartice'>
+            <div class='opis'>Ethnic Density of Yugoslavia in 1971</div>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+      <a target="_blank" href="maps/full/dot_density_yug_ethno_1981.png">
+        <div class='kartica'>
+          <i class='fa fa-image ikonica'></i>
+          <img src='maps/dot_density_yug_ethno_1981.jpg'>
+          <div class='tekstKartice'>
+            <div class='opis'>Ethnic Density of Yugoslavia in 1981</div>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    <div class="col-xs-12 col-md-6">
+      <a target="_blank" href="maps/full/dot_density_yug_ethno_1991.png">
+        <div class='kartica'>
+          <i class='fa fa-image ikonica'></i>
+          <img src='maps/dot_density_yug_ethno_1991.jpg'>
+          <div class='tekstKartice'>
+            <div class='opis'>Ethnic Density of Yugoslavia in 1991</div>
+          </div>
+        </div>
+      </a>
     </div>
 
     <h2 class="maps-heading">Kosovo</h2>
